cmake_minimum_required(VERSION 2.8)

project(task1)


include_directories(
  ${CMAKE_SOURCE_DIR}/include
)



file(GLOB MAIN_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB MAIN_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h*)

source_group("include" FILES ${MAIN_HEADERS})

target_compile_features(${CMAKE_PROJECT_NAME} PRIVATE cxx_range_for)

target_link_libraries(${CMAKE_PROJECT_NAME})